MARWEB-364 buggy scrollbar when opening modalbox (bootstrap bug)

--- a/src/main/webapp/style/balticweb.css
+++ b/src/main/webapp/style/balticweb.css
@@ -7,6 +7,7 @@ html {
 body {
     /* Margin bottom by footer height */
     margin-bottom: 0px;
+    overflow-y: scroll !important; /* fixing */
 }
 /* Sticky footer styles
 -------------------------------------------------- */
